# llm-brand-detector

./: .env.example  .gitignore  CODE_ANALYSIS_FLOW_DIAGRAMS.md  README.md  improvement-plan.md  pyproject.toml  quick_test.py  run_streamlit.py  start_app.py  test_refactor.py
.claude/: settings.local.json
scripts/: run.py  setup.py
src/firegeo/: __init__.py  streamlit_app.py
src/firegeo/core/: __init__.py  simple_detector.py
src/firegeo/core/ai_providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  perplexity_provider.py
src/firegeo/core/token_tracking/: __init__.py  cost_calculator.py  tracker.py
src/firegeo/localization/: __init__.py  i18n.py
src/firegeo/models/: __init__.py  analysis.py  config.py
src/firegeo/utils/: __init__.py  api_validation.py  export.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_analyzer.py  test_brand_detector.py  test_storage.py
